--- a/.gitattributes
+++ b/.gitattributes
@@ -4,3 +4,4 @@
 *.yaml filter=lfs diff=lfs merge=lfs -text
 *.lock filter=lfs diff=lfs merge=lfs -text
 *.toml filter=lfs diff=lfs merge=lfs -text
+*.py filter=lfs diff=lfs merge=lfs -text
