--- a/.gitattributes
+++ b/.gitattributes
@@ -5,3 +5,4 @@
 *.lock filter=lfs diff=lfs merge=lfs -text
 *.toml filter=lfs diff=lfs merge=lfs -text
 *.py filter=lfs diff=lfs merge=lfs -text
+*.jpg filter=lfs diff=lfs merge=lfs -text
