--- a/.gitattributes
+++ b/.gitattributes
@@ -6,3 +6,4 @@
 *.toml filter=lfs diff=lfs merge=lfs -text
 *.py filter=lfs diff=lfs merge=lfs -text
 *.jpg filter=lfs diff=lfs merge=lfs -text
+*.png filter=lfs diff=lfs merge=lfs -text
