--- a/.gitattributes
+++ b/.gitattributes
@@ -7,3 +7,4 @@
 *.py filter=lfs diff=lfs merge=lfs -text
 *.jpg filter=lfs diff=lfs merge=lfs -text
 *.png filter=lfs diff=lfs merge=lfs -text
+*.sh filter=lfs diff=lfs merge=lfs -text
