--- a/.gitattributes
+++ b/.gitattributes
@@ -8,3 +8,4 @@
 *.jpg filter=lfs diff=lfs merge=lfs -text
 *.png filter=lfs diff=lfs merge=lfs -text
 *.sh filter=lfs diff=lfs merge=lfs -text
+/Dockerfile filter=lfs diff=lfs merge=lfs -text
