--- a/.gitattributes
+++ b/.gitattributes
@@ -9,3 +9,4 @@
 *.png filter=lfs diff=lfs merge=lfs -text
 *.sh filter=lfs diff=lfs merge=lfs -text
 /Dockerfile filter=lfs diff=lfs merge=lfs -text
+*.yml filter=lfs diff=lfs merge=lfs -text
